fix: Use overflow: auto on releases menu

--- a/client/containers/Pub/PubHeader/draftReleaseButtons.scss
+++ b/client/containers/Pub/PubHeader/draftReleaseButtons.scss
@@ -1,6 +1,6 @@
-.releases-menu{
+.releases-menu {
   max-height: 400px;
-  overflow-y: scroll;
+  overflow-y: auto;
   .top {
     margin-bottom: 2px;
   }
